--- a/src/styles/components/block.scss
+++ b/src/styles/components/block.scss
@@ -16,6 +16,10 @@
     padding-right: 1.2rem;
   }
 
+  .content {
+    word-wrap: break-word;
+  }
+
   .title {
     display: inline-block;
     margin-bottom: 0.4rem;
@@ -38,6 +42,10 @@
   .meta, .tag, .desc {
     color: $textColor02;
     font-size: 1em;
+  }
+
+  .desc { 
+    text-align: justify;
   }
 
   .meta {
@@ -74,6 +82,7 @@
 
   .section {
     margin: 0.8rem 0 1.2rem 0;
+    text-align: justify;
 
     @media print {
       *,
